<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permlab_writeSettings">modify Slim system settings</string>
    <string name="permdesc_writeSettings">Allows an app to modify Slim system settings.</string>
    <string name="permlab_writeSecureSettings">modify Slim secure system settings</string>
    <string name="permdesc_writeSecureSettings">Allows an app to modify Slim secure system settings. Not for use by normal apps.</string>
    <string name="reset">Reset</string>
    <string name="disabled">Disabled</string>
    <string name="help">Help</string>
    <string name="attention">Attention</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="help_label">Help &amp; feedback</string>
    <string name="no_home_key">You have no button assigned any more to the \"Home\" action!\n\nThis can make your device unusable!</string>
    <string name="no_back_key">You have no button assigned any more to the \"Back\" action!\n\nThis can make your device unusable!</string>
    <string name="settings_header_category_personalization">Personalization</string>
    <string name="shortcut_action_none">None</string>
    <string name="shortcut_action_menu">Menu</string>
    <string name="shortcut_action_ring_vib">Ring/Vib</string>
    <string name="shortcut_action_ring_silent">Ring/Silent</string>
    <string name="shortcut_action_ring_vib_silent">Ring/Vib/Silent</string>
    <string name="shortcut_action_media_next">Music - next track</string>
    <string name="shortcut_action_media_play_pause">Music - play/pause</string>
    <string name="shortcut_action_media_previous">Music - previous track</string>
    <string name="shortcut_action_wake_device">Wake up device</string>
    <string name="shortcut_action_kill">Kill app</string>
    <string name="shortcut_action_screenshot">Screenshot</string>
    <string name="shortcut_action_lastapp">Last app</string>
    <string name="shortcut_action_notifications">Notifications</string>
    <string name="shortcut_action_qs">Quicksettings panel</string>
    <string name="shortcut_action_longpress">Longpress:</string>
    <string name="shortcut_action_doubletap">Double-Tap:</string>
    <string name="shortcut_action_select_action_longpress">Choose longpress action:</string>
    <string name="shortcut_action_select_action_doubletap">Choose Double-Tap action:</string>
    <string name="shortcut_action_select_action">Choose action:</string>
    <string name="shortcut_action_select_action_newaction">Choose new action:</string>
    <string name="shortcut_action_reset">Reset</string>
    <string name="shortcut_action_add">Add</string>
    <string name="shortcut_action_reset_message">Reset all entries to default?</string>
    <string name="shortcut_action_max">Maximum entries size has been reached</string>
    <string name="shortcut_action_warning">Warning</string>
    <string name="shortcut_action_warning_message">It is not possible to delete last entry</string>
    <string name="shortcut_action_required_warning_message">It is not possible to delete required buttons</string>
    <string name="shortcut_action_disable_message">Disabled\nAdd an entry to enable this feature</string>
    <string name="shortcut_image_not_valid">The chosen app did not return a valid icon or does not support image cropping. Use another app.</string>
    <string name="shortcut_duplicate_entry">The chosen action cannot be added twice</string>
    <string name="shortcut_action_help_shortcut">shortcut</string>
    <string name="shortcut_action_help_button">button</string>
    <string name="shortcut_action_help_app">app</string>
    <string name="shortcut_action_help_icon">, while selecting the icon will bring up customization options</string>
    <string name="shortcut_action_help_main">To add a %1$s, select the Add icon. Once a %1$s is added, selecting the row will change the target%2$s\n\nTo remove a %1$s, swipe the row horizontally left or right. Re-order a %1$s in the list by vertically dragging the anchor on the left.\n\nTo clear or reset to defaults, select the reset option.</string>
    <string name="shortcut_action_help_delete_last_entry">Removing every %1$s in the list will disable the feature entirely.</string>
    <string name="shortcut_action_help_pie_second_layer_delete_last_entry">Removing every %1$s in the list will disable the second pie layer entirely.</string>
    <string name="shortcuts_applications">Applications</string>
    <string name="shortcuts_select_custom_app_title">Select custom application</string>
    <string name="shortcuts_icon_picker_type">Select icon type:</string>
    <string name="shortcuts_icon_default">Default</string>
    <string name="shortcuts_icon_presets">System icons</string>
    <string name="shortcuts_icon_custom">Gallery</string>
    <string name="shortcuts_icon_picker_choose_icon_title">Choose icon</string>
    <string name="shortcuts_icon_picker_alarm">Alarm</string>
    <string name="shortcuts_icon_picker_andy">Andy</string>
    <string name="shortcuts_icon_picker_battery">Battery</string>
    <string name="shortcuts_icon_picker_browser">Browser</string>
    <string name="shortcuts_icon_picker_calendar">Calendar</string>
    <string name="shortcuts_icon_picker_camera">Camera</string>
    <string name="shortcuts_icon_picker_cloud">Cloud</string>
    <string name="shortcuts_icon_picker_contact">Contact</string>
    <string name="shortcuts_icon_picker_directdial">Direct Dial</string>
    <string name="shortcuts_icon_picker_directmessage">Direct Message</string>
    <string name="shortcuts_icon_picker_drive">Drive</string>
    <string name="shortcuts_icon_picker_dropbox">Dropbox</string>
    <string name="shortcuts_icon_picker_email">Email</string>
    <string name="shortcuts_icon_picker_email2">Email Alternate</string>
    <string name="shortcuts_icon_picker_evernote">Evernote</string>
    <string name="shortcuts_icon_picker_facebook">Facebook</string>
    <string name="shortcuts_icon_picker_favorite">Favorite</string>
    <string name="shortcuts_icon_picker_file_browser">File Browser</string>
    <string name="shortcuts_icon_picker_file_browser2">File Browser Alternate</string>
    <string name="shortcuts_icon_picker_fitness">Fitness</string>
    <string name="shortcuts_icon_picker_gallery">Gallery</string>
    <string name="shortcuts_icon_picker_gears">Gears</string>
    <string name="shortcuts_icon_picker_google_small">Google</string>
    <string name="shortcuts_icon_picker_gplus">Google Plus</string>
    <string name="shortcuts_icon_picker_gtalk">Hangouts</string>
    <string name="shortcuts_icon_picker_help">Help</string>
    <string name="shortcuts_icon_picker_joystick">Joystick</string>
    <string name="shortcuts_icon_picker_key">Keys/Accounts</string>
    <string name="shortcuts_icon_picker_laptop">Laptop</string>
    <string name="shortcuts_icon_picker_notes">Notes</string>
    <string name="shortcuts_icon_picker_luggage">Travel</string>
    <string name="shortcuts_icon_picker_maps">Maps</string>
    <string name="shortcuts_icon_picker_market">Market</string>
    <string name="shortcuts_icon_picker_movie">Movies</string>
    <string name="shortcuts_icon_picker_music">Music</string>
    <string name="shortcuts_icon_picker_nav">Navigation</string>
    <string name="shortcuts_icon_picker_phone">Phone</string>
    <string name="shortcuts_icon_picker_package">Package</string>
    <string name="shortcuts_icon_picker_pinterest">Pinterest</string>
    <string name="shortcuts_icon_picker_play">Play</string>
    <string name="shortcuts_icon_picker_pocket">Pocket</string>
    <string name="shortcuts_icon_picker_quicksettings">Quick Settings</string>
    <string name="shortcuts_icon_picker_rss">RSS Feed</string>
    <string name="shortcuts_icon_picker_sdcard">SDCard</string>
    <string name="shortcuts_icon_picker_search">Search</string>
    <string name="shortcuts_icon_picker_sms">Messaging</string>
    <string name="shortcuts_icon_picker_tasks">Tasks</string>
    <string name="shortcuts_icon_picker_terminal">Terminal</string>
    <string name="shortcuts_icon_picker_transit">Transit</string>
    <string name="shortcuts_icon_picker_tv">TV</string>
    <string name="shortcuts_icon_picker_twitter">Twitter</string>
    <string name="shortcuts_icon_picker_unlock">Unlock</string>
    <string name="shortcut_action_back">Back</string>
    <string name="shortcut_action_app">Custom app</string>
    <string name="shortcut_action_home">Home</string>
    <string name="shortcut_action_navbar">Navigation bar</string>
    <string name="shortcut_action_ime">Open IME Switcher</string>
    <string name="shortcut_action_power_menu">Power menu</string>
    <string name="shortcut_action_smart">Smart pulldown</string>
    <string name="shortcut_action_recent">Recents</string>
    <string name="shortcut_action_power">Screen Off</string>
    <string name="shortcut_action_camera">Camera</string>
    <string name="shortcut_action_assist">Search</string>
    <string name="shortcut_action_search">Search in app</string>
    <string name="shortcut_action_theme_switch">Theme switcher</string>
    <string name="shortcut_action_torch">Torch</string>
    <string name="shortcut_action_voice_search">Voice search</string>
    <string name="shortcut_action_nowontap">Google Now / Now on Tap</string>
    <string name="shortcut_action_split_screen">Split screen</string>
    <string name="shortcut_action_doze_pulse">Doze pulse</string>
    <string name="icon_color_mode_all_icons">All icons</string>
    <string name="icon_color_mode_system_icons">System icons</string>
    <string name="icon_color_mode_system_custom_icons">System and custom icons</string>
    <string name="default_string">Default</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="display_category_prox_auto_speaker_title">Proximity speaker settings</string>
    <string name="prox_auto_speaker_options">Proximity speaker options</string>
    <string name="prox_auto_speaker_title">Automatic proximity speaker</string>
    <string name="prox_auto_speaker_summary">Enable speakerphone when the device is removed from your face</string>
    <string name="prox_auto_speaker_delay_title">Proximity speaker delay</string>
    <string name="prox_auto_speaker_delay_summary">Time delay before speaker is activated</string>
    <string name="prox_auto_speaker_incall_only_title">Only while in call</string>
    <string name="prox_auto_speaker_incall_only_summary_on">On outgoing calls, listener will only become active after the receiving party answers</string>
    <string name="prox_auto_speaker_incall_only_summary_off">Listener will be active during all offhook call states (default)</string>
    <string name="display_category_doze_options_title">Ambient display (doze) options</string>
    <string name="doze_settings_title">Advanced doze options</string>
    <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
    <string name="increasing_ring_min_volume_title">Start volume</string>
    <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
    <string name="proximity_wake_title">Prevent accidental wake up</string>
    <string name="gesture_arrow_down_title">Arrow down</string>
    <string name="gesture_arrow_left_title">Arrow left</string>
    <string name="gesture_arrow_right_title">Arrow right</string>
    <string name="gesture_arrow_up_title">Arrow up</string>
    <string name="gesture_circle_title">Circle</string>
    <string name="gesture_double_swipe_title">Double finger swipe down</string>
</resources>